Changed grid ratio. Need to update to make nav and footer fixed so resizing will not break the layout.

--- a/src/App/components/Layout/Layout.module.css
+++ b/src/App/components/Layout/Layout.module.css
@@ -5,5 +5,5 @@
 .Layout {
     display: grid;
     height: 100vh;
-    grid-template-rows: 1fr 8fr 1fr;
+    grid-template-rows: 1fr 12fr 1fr;
 }
